change file names

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       type="text/css"
     />
 
-    <link rel="stylesheet" href="./html-challenge.css" />
+    <link rel="stylesheet" href="./index.css" />
     <title>Social Media Dashboard</title>
   </head>
 
@@ -312,6 +312,6 @@
         </div>
       </div>
     </div>
-    <script src="html-challenge.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
